fixed white space in right margin
Former-commit-id: c8f991d9f83056a7f5774e267455b35fd09867b3
Former-commit-id: 8e78e372cf8da21de84ebad6c27179296c394995
Former-commit-id: ede1b1a12f6a54bc0386f456e5e1f2ffa496e559

--- a/landing_page/public/assets/css/style2.css
+++ b/landing_page/public/assets/css/style2.css
@@ -8,6 +8,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 
 .content {
   display: table-cell;
